# nba_queries

./: .gitignore  CMakeLists.txt  README.md  basic_benchmark.csv  build.sh  callgrind.out.10017  callgrind.out.29208  callgrind.out.29390  callgrind.out.30563  clean_data.sh  clean_data_all.sh  clean_data_all_games.sh  clean_data_debug_games.sh  clean_queries_run.sh  cleaned_queries_callgrind.sh  cleaned_queries_debug.sh  cleaned_queries_debug_perf.sh  cleaned_queries_measure.sh  cleaned_queries_measure_with_debug.sh  cleaned_queries_perf.sh  cleaned_queries_run.sh  create_tables.sql  debug_test.sh  distance.sql  dump_cleaned_asm.sh  proto_data_all_games.sh  proto_data_debug_games.sh  query1_debug.sh  query1_run.sh  query2_run.sh  query2a_debug.sh  query2a_run.sh  query3_debug.sh  query3_gdb.sh  query3_run.sh  run_all.sh  run_main.sh  run_test.sh  short_main.sh  timing.csv
docker/: .dockerignore  .gitignore  Dockerfile  README.md  attach.sh  build.sh  run.sh  start.sh  stop.sh
docs/: index.html  visualize.js
docs/data/: is_stoppage.csv
include/: benchmark.h  check_distances.h  clean_find_trajectories.h  clean_queries.h  col_stores.h  concepts.h  convert_proto.h  factorial.h  find_trajectories.h  load_data.h  query3_clean_find_trajectories_fixed_origin.h  query_main.h  query_structs.h  storage_structs.h
scripts/cars/: clean_data_all_games.sh  clean_data_debug_games.sh
scripts/nba/: clean_data_debug_games.sh  clean_data_default_game.sh  cleaned_queries_callgrind.sh  cleaned_queries_debug.sh  cleaned_queries_debug_perf.sh  cleaned_queries_measure.sh  cleaned_queries_perf.sh  concepts_debug.sh  concepts_measure.sh
src/bench_cpp/: .gitignore  Makefile  benchmark  main.cpp
src/cpp/: .dir-locals.el
src/cpp/cars/: CMakeLists.txt
src/cpp/cars/include/: car_bin.h  car_load_data.h  car_query_structs.h  query_structs.h
src/cpp/cars/lib/: load_data.cpp
src/cpp/lib/: check_distances.cpp  col_stores.cpp  convert_proto.cpp  factorial.cpp  find_trajectories.cpp  load_data.cpp  query_structs.cpp  spatial_binning.cpp
src/cpp/lib/clean/: clean_find_trajectories.cpp  query12_clean_is_paul_george_near_ball_in_paint.cpp  query13_end_game_moments.cpp  query14_players_in_paint_at_end.cpp  query15_players_in_paint_shot_clock.cpp  query1_clean_binned_nearest_defender.cpp  query1_clean_nearest_defender.cpp  query3_clean_binned_find_trajectories_fixed_origin.cpp  query3_clean_find_trajectories_fixed_origin.cpp
src/cpp/lib/concepts/: concept.cpp  possession.cpp  stoppage.cpp
src/cython/: .gitignore  benchmark.py  build.sh  data.pxd  data.pyx  debug.sh  find_trajectories.pxd  find_trajectories.pyx  interpreter_load.py  load.pxd  load.pyx  load_cython.py  measure.sh  nearest_defender.pxd  nearest_defender.pyx  player_data.pyx  pyproject.toml  run_analysis.py  run_python.py  setup.py  test_code.py
src/ispc/: Makefile  benchmark.ispc  main.cpp  run.sh
src/js/: index.html  possession.csv  stoppage.csv  visualize.js
src/js/data/: is_not_stoppage.csv  possession.csv
src/proto/: CMakeLists.txt  car_moment.capnp  moment.capnp  moment.proto
src/q/: basic_measurements.q  benchmark.q  find_trajectory_fixed_location.q  find_trajectory_free_variables.q  interpret_measurements.q  nearest_defender.q  run_basic.sh
src/q/plugins/: Makefile  halide_bench.cpp
src/sql/: create_tables.sql
test/: .dir-locals.el  test_check_distances.cpp  test_factorial.cpp  test_find_trajectories.cpp  test_load_data.cpp
theory/: README.md  concepts.md  queries.md  taxonomies.md  timing_issues.md
